--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
     <title>My BookList App</title>
+    <!-- cdn styles from bootswatch and font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="https://bootswatch.com/4/yeti/bootstrap.css"></link>
   </head>
+
   <body>
     <div class="container mt-4">
       <h1 class="display-4 text-center">
@@ -29,6 +32,7 @@
         </div>
         <input type="submit" value="Add Book" class="btn btn-primary btn-block">
       </form>
+      
       <table class="table table-striped mt-5">
         <thead>
           <tr>
@@ -44,6 +48,7 @@
       </table>
     </div>
 
+    <!-- load local js last thing in body -->
     <script src="app.js"></script>
     
   </body>
